# plane-extraction

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ClickHandler.h  CloudPointProcessor.h  CloudPointProcessor.hpp  Draw.h  Stitcher.h
src/: ClickHandler.cpp  CloudPointProcessor.cpp  Draw.cpp  Main.cpp  Stitcher.cpp
